# solvis-store

./: .bumpversion.cfg  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: dev.yml  preview.yml  publish-static-docs.yml  release.yml  run-tests.yml
docs/: scripts.md
scripts/: cli.py
solvis/: cli.py
solvis_store/: __init__.py  model.py  solvis_db.py  solvis_db_query.py
solvis_store/create/: __init__.py  create_location_radius_rupture_models.py  create_parent_fault_rupture_models.py
solvis_store/query/: __init__.py  fault_name.py  location_radius.py
solvis_store/scripts/: cli.py
tests/: test_model.py  test_query_fault_name.py  test_query_location_radius.py  test_solvis_db_query.py
