[tool]
[tool.poetry]
name = "solvis-store"
version = "2.0.0"
homepage = "https://github.com/GNS-Science/solvis-store"
description = "Solvis Store."
authors = ["Oakley Jurgens <nshm@gns.cri.nz>", "Chris Chamberlain <chrisbc@artisan.co.nz>"]
readme = "README.md"
license =  "GPL-3.0-only"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "solvis_store" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.scripts]
cli = 'scripts.cli:cli'

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pynamodb = "^5.4.1"
solvis = {git = "https://github.com/GNS-Science/solvis.git", rev = "a15f0234a225aa8090ef7cb70b49531ffa01ae2c"}

# see https://github.com/orgs/python-poetry/discussions/7937
urllib3 = "<2" 
numpy = "<1.25"


[tool.poetry.group.dev.dependencies]
black  = { version = "^22.3"}
bump2version = {version = "^1.0.1"}
flake8  = { version = "^3.9.2"}
flake8-docstrings = { version = "^1.6.0", optional = true }
isort  = { version = "^5.8.0"}
jinja2 = {version = "3.0.3"}
mkdocs  = { version = "^1.1.2"}
mkdocs-autorefs = {version = "^0.3.1"}
mkdocs-include-markdown-plugin  = { version = "^1.0.0"}
mkdocs-material  = { version = "^6.1.7"}
mkdocs-material-extensions  = { version = "^1.0.1"}
mkdocs-pymdownx-material-extras = "^2.0.3"
mkdocstrings  = { version = "^0.18.0"}
mkdocstrings-python = {version = "^0.6.5"}
moto = "^4.1.7"
mypy = {version = "^0.900"}
pip  = { version = "^20.3.1", optional = true}
pre-commit = {version = "^2.12.0", optional = true}
pymdown-extensions = {version = "^9.4"}
pytest = { version = "^6.2.4"}
pytest-cov  = { version = "^2.12.0"}
toml = {version = "^0.10.2", optional = true}
tox = { version = "^4.4.12"}
twine  = { version = "^3.3.0"}
virtualenv  = { version = "^20.2.2", optional = true}


[tool.poetry.group.scripts.dependencies]
ipython = "^8.12.0"
nshm-toshi-client = "^1.0.0"
nzshm-common = "^0.6.0"
nzshm-model = "^0.3.0"
pyvista = "^0.38.5"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
