[tool]
[tool.poetry]
name = "solvis-store"
version = "2.0.3"
homepage = "https://github.com/GNS-Science/solvis-store"
description = "Solvis Store."
authors = ["Oakley Jurgens <nshm@gns.cri.nz>", "Chris Chamberlain <chrisbc@artisan.co.nz>"]
readme = "README.md"
license =  "GPL-3.0-only"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "solvis_store" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.scripts]
cli = 'scripts.cli:cli'

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pynamodb = "^5.5.0"
solvis = {git = "https://github.com/GNS-Science/solvis", rev = "pre-release"}

# see https://github.com/orgs/python-poetry/discussions/7937
urllib3 = "<2"
numpy = "<1.25"

[tool.poetry.group.dev.dependencies]
black  = { version = "^22.3"}
bump2version = {version = "^1.0.1"}
flake8  = { version = "^3.9.2"}
flake8-docstrings = { version = "^1.6.0", optional = true }
isort  = { version = "^5.8.0"}

moto = "^4.1.7"
mypy = {version = "^0.900"}
pip  = { version = "^20.3.1", optional = true}
pre-commit = {version = "^2.12.0", optional = true}
pymdown-extensions = {version = "^10.2"}
pytest = { version = "^6.2.4"}
pytest-cov  = { version = "^2.12.0"}
toml = {version = "^0.10.2", optional = true}
tox = { version = "^4.4.12"}
virtualenv  = { version = "^20.2.2", optional = true}

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.0"
mkdocstrings = {version = "^0.25.1", extras = ["python"]}
mkdocs-autorefs = "^1.0.1"
mkdocs-include-markdown-plugin = "^6.0.6"
mkdocs-material = "^9.5.21"
mkdocs-material-extensions = "^1.3.1"
mkdocs-pymdownx-material-extras = "^2.5.6"
mkdocs-with-pdf = "^0.9.3"
mkdocs-click = "^0.8.1"

[tool.poetry.group.scripts.dependencies]
ipython = "^8.12.0"
nshm-toshi-client = "^1.0.0"
nzshm-common = "^0.7.0"
nzshm-model = "^0.6.0"
pyvista = "^0.38.5"
click = "^8.1.7"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
